# rag-mcp-server-main

./: DEV_SPEC.md  LICENSE  README.md  conftest.py  main.py  pyproject.toml
.github/skills/checkpoint/: SKILL.md
.github/skills/dev-workflow/: SKILL.md
.github/skills/implement/: SKILL.md
.github/skills/progress-tracker/: SKILL.md
.github/skills/spec-sync/: SKILL.md
.github/skills/testing-stage/: SKILL.md
cache/: .gitkeep
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  rerank.txt
data/: .gitkeep
logs/: .gitkeep
scripts/: evaluate.py  ingest.py  start_dashboard.py
src/core/: __init__.py  settings.py
src/core/query_engine/: __init__.py
src/core/response/: __init__.py
src/core/trace/: __init__.py
src/ingestion/: __init__.py
src/ingestion/embedding/: __init__.py
src/ingestion/storage/: __init__.py
src/ingestion/transform/: __init__.py
src/libs/: __init__.py
src/libs/llm/: __init__.py  (+6 more)
src/mcp_server/: __init__.py
src/observability/: __init__.py  logger.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_chroma_store_roundtrip.py
tests/unit/: __init__.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_embedding_factory.py  test_llm_factory.py  test_llm_providers_smoke.py  test_llm_reranker.py  test_local_embedding.py  test_ollama_llm.py  test_openai_embedding.py  test_recursive_splitter.py  test_reranker_factory.py  test_settings.py  test_smoke_imports.py  test_splitter_factory.py  test_vector_store_contract.py
(+30 files in other folders)
